--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,11 @@ logging.level.root=warn
 logging.level.org.springframework.web=debug
 logging.level.org.springframework.data.mongodb=debug
 logging.level.com.kiraliza.spring=trace
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=debug
 logging.file.name=./logs/server.log
 
 server.port=18081
 spring.profiles.active=dev
+
+server.error.whitelabel.enabled=false
+server.error.path=/error
