--- a/build.gradle
+++ b/build.gradle
@@ -34,9 +34,11 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
     testImplementation 'org.springframework.boot:spring-boot-testcontainers'
+    testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
     testImplementation 'org.testcontainers:testcontainers-mongodb'
     testImplementation 'org.testcontainers:testcontainers-rabbitmq'
+    testImplementation 'org.hamcrest:hamcrest'
 
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
