--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -12,3 +12,5 @@ logging.level.org.springframework.web=debug
 logging.level.org.springframework.data.mongodb=debug
 logging.level.com.kiraliza.spring=trace
 logging.file.name=./logs/test.log
+
+spring.messages.basename=i18n/messages
