--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ spring.profiles.active=dev
 
 server.error.whitelabel.enabled=false
 server.error.path=/error
+
+spring.messages.basename=i18n/messages
